@@ -1,3 +1,12 @@
+2024-10-26T00:46:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11527426128 # 460
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-26
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 422 812 / 425 815
+* notice: next accum: outdated-unq outdated-all / unq all: 423 813 / 425 815
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-10-12] / []
+
 2024-10-24T00:48:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11490533844 # 458
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-24
